--- a/homework/homework3/hw03_python_fundamentals.ipynb
+++ b/homework/homework3/hw03_python_fundamentals.ipynb
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loop: 0.13027095794677734\n",
-      "vectorized: 0.0\n"
+      "loop: 0.13318991661071777\n",
+      "vectorized: 0.002127408981323242\n"
      ]
     }
    ],
@@ -417,15 +417,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_summary_stats\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m stats = \u001b[43mget_summary_stats\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(stats.keys())\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\bootcamp_valerie_wu\\homework\\homework3\\src\\utils.py:4\u001b[39m, in \u001b[36mget_summary_stats\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_summary_stats\u001b[39m(df):\n\u001b[32m      2\u001b[39m     \n\u001b[32m      3\u001b[39m     \u001b[38;5;66;03m# Numeric summary\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     describe_stats = df.describe(include=[\u001b[43mnp\u001b[49m.number]).to_dict()\n\u001b[32m      6\u001b[39m     \u001b[38;5;66;03m# Groupby aggregation\u001b[39;00m\n\u001b[32m      7\u001b[39m     by_category = (\n\u001b[32m      8\u001b[39m         df.groupby(\u001b[33m\"\u001b[39m\u001b[33mcategory\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m           .agg(\n\u001b[32m   (...)\u001b[39m\u001b[32m     16\u001b[39m           .to_dict(orient=\u001b[33m\"\u001b[39m\u001b[33mrecords\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m     )\n",
-      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['describe', 'by_category'])\n"
      ]
     }
    ],
