--- a/homework/homework7/notebooks/stage07_outliers-risk-assumptions_homework-starter.ipynb
+++ b/homework/homework7/notebooks/stage07_outliers-risk-assumptions_homework-starter.ipynb
@@ -269,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "def winsorize_series(series: pd.Series, lower: float = 0.05, upper: float = 0.95) -> pd.Series:\n",
+    "def winsorize_series(series: pd.Series, lower: float = 0.005, upper: float = 0.995) -> pd.Series:\n",
     "    lo = series.quantile(lower)\n",
     "    hi = series.quantile(upper)\n",
     "    return series.clip(lower=lo, upper=hi)"
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d965c1b4",
    "metadata": {
     "tags": [
@@ -423,7 +423,7 @@
        "      <th>mean</th>\n",
        "      <td>-0.001434</td>\n",
        "      <td>-0.000039</td>\n",
-       "      <td>-0.000251</td>\n",
+       "      <td>-0.001531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
@@ -435,7 +435,7 @@
        "      <th>std</th>\n",
        "      <td>0.040579</td>\n",
        "      <td>0.009443</td>\n",
-       "      <td>0.010623</td>\n",
+       "      <td>0.039194</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -443,12 +443,12 @@
       ],
       "text/plain": [
        "             all  filtered_iqr  winsorized\n",
-       "mean   -0.001434     -0.000039   -0.000251\n",
+       "mean   -0.001434     -0.000039   -0.001531\n",
        "median -0.000187     -0.000100   -0.000187\n",
-       "std     0.040579      0.009443    0.010623"
+       "std     0.040579      0.009443    0.039194"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "f7e868c4",
    "metadata": {
     "tags": [
@@ -525,6 +525,13 @@
        "      <td>0.573566</td>\n",
        "      <td>0.004903</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>winsorized</th>\n",
+       "      <td>1.647829</td>\n",
+       "      <td>-0.000260</td>\n",
+       "      <td>0.958789</td>\n",
+       "      <td>0.006614</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -532,10 +539,11 @@
       "text/plain": [
        "                 slope  intercept        r2       mae\n",
        "all           1.587569  -0.000373  0.961859  0.006333\n",
-       "filtered_iqr  0.972675   0.000031  0.573566  0.004903"
+       "filtered_iqr  0.972675   0.000031  0.573566  0.004903\n",
+       "winsorized    1.647829  -0.000260  0.958789  0.006614"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,19 +553,22 @@
     "if 'daily_return_2' in df.columns:\n",
     "    X_all = df[['daily_return_2']].to_numpy(); y_all = df[target_col].to_numpy()\n",
     "    X_filtered = df.loc[~df['outlier_iqr_col1'], ['daily_return_2']].to_numpy(); y_filtered = df.loc[~df['outlier_iqr_col1'], target_col].to_numpy()\n",
-    "\n",
+    "    X_winsorized = winsorize_series(df['daily_return_2']).to_numpy().reshape(-1,1); y_winsorized = y_all\n",
+    "    \n",
     "    model_all = LinearRegression().fit(X_all, y_all)\n",
     "    model_flt = LinearRegression().fit(X_filtered, y_filtered)\n",
+    "    model_wins = LinearRegression().fit(X_winsorized, y_winsorized)\n",
     "\n",
     "    mae_all = mean_absolute_error(y_all, model_all.predict(X_all))\n",
     "    mae_flt = mean_absolute_error(y_filtered, model_flt.predict(X_filtered))\n",
+    "    mae_wins = mean_absolute_error(y_winsorized, model_wins.predict(X_winsorized))\n",
     "\n",
     "    results = pd.DataFrame({\n",
-    "        'slope': [model_all.coef_[0], model_flt.coef_[0]],\n",
-    "        'intercept': [model_all.intercept_, model_flt.intercept_],\n",
-    "        'r2': [model_all.score(X_all, y_all), model_flt.score(X_filtered, y_filtered)],\n",
-    "        'mae': [mae_all, mae_flt]\n",
-    "    }, index=['all', 'filtered_iqr'])\n",
+    "        'slope': [model_all.coef_[0], model_flt.coef_[0], model_wins.coef_[0]],\n",
+    "        'intercept': [model_all.intercept_, model_flt.intercept_, model_wins.intercept_],\n",
+    "        'r2': [model_all.score(X_all, y_all), model_flt.score(X_filtered, y_filtered), model_wins.score(X_winsorized, y_winsorized)],\n",
+    "        'mae': [mae_all, mae_flt, mae_wins]\n",
+    "    }, index=['all', 'filtered_iqr', 'winsorized'])\n",
     "else:\n",
     "    results = None\n",
     "    print(\"No 'x' column; skip regression or engineer features.\")\n",
@@ -584,15 +595,16 @@
     "#### Methods and thresholds used (and why)\n",
     "- IQR-based filtering with multiplier k=1.5\n",
     "- Z-score detection with the threshold=3.0\n",
-    "- winsorization with lower and upper quantile=(0.05, 0.95)\n",
+    "- winsorization with lower and upper quantile=(0.005, 0.995)\n",
     "- We use IQR filtering when we want to detect/flag or remove suspicious points, and we use winsorization when we want to keep all rows but blunt the influence of extremes.\n",
     "#### Assumptions behind choices\n",
     "- We assumed that outliers are discardable and do not have meaningful business insight.\n",
-    "- We chose the thresholds by standard practices: k=1.5 for IQR, z=3 to detect extreme deviations, and 5% / 95% quantile for winsorization.\n",
+    "- We chose the thresholds by standard practices: k=1.5 for IQR, z=3 to detect extreme deviations, and 0.5% / 99.5% quantile for winsorization.\n",
     "#### Observed impact on results\n",
-    "- We observed that removing outliers by IQR-filtering substantially reduced the slope and $R^2$ (from 1.59 to 0.97 and 0.96 to 0.57), suggesting the extreme values have significant impact on the linearity.\n",
+    "- We observed that removing outliers by IQR-filtering substantially reduced the slope and $R^2$ (from 1.59 to 0.97 and 0.96 to 0.57), suggesting the extreme values have a significant impact on the linearity.\n",
+    "- The winsorized data looked off when the cutoffs were too aggressive (e.g. 5% / 95%). Later, we used mild tails (0.5% / 99.5% here) to avoid the drift of the slope and $R^2$.\n",
     "#### Risks if assumptions are wrong (e.g., discarding true events)\n",
-    "- Removing outliers could be biased, as in real trading world, outliers often suggest extreme returns or losses.\n",
+    "- Removing outliers could be biased, as in the real trading world, outliers often suggest extreme returns or losses.\n",
     "- Winsorizing could hide extreme risks."
    ]
   },
